# wedding

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh
backend/: Cargo.toml
backend/assets/web/: index.html
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/src/: db.rs  env.rs  exception.rs  logger.rs  main.rs  state.rs  website.rs
backend/src/ajax/: mod.rs  router.rs  shared.rs  state.rs
backend/src/ajax/router/: admin.rs  guest.rs  guest_internal.rs  internal_guest.rs  invitation.rs  mod.rs
backend/src/ajax/router/validator/: guest_info_view.rs  mod.rs
backend/src/ajax/shared/: cookie.rs  middleware.rs
backend/src/db/: admin_record.rs  collection.rs  connect.rs  ext.rs  guest_info.rs  log_record.rs  mod.rs
backend/src/db/admin_record/: conversion.rs  schema.rs
backend/src/db/collection/: admin_record.rs  ext.rs  guest_info.rs  log_record.rs  login_record.rs  mod.rs
backend/src/db/guest_info/: conversion.rs  schema.rs  validator.rs
backend/src/db/log_record/: schema.rs
backend/src/interface/: login.rs
frontend/: index.html  package.json  pnpm-lock.yaml  rspack.config.ts  tsconfig.json  ui.config.json  vite.config.ts
frontend/src/: index.css  index.html  index.ts  index.tsx  main.tsx  react-env.d.ts  routes.ts
frontend/src/ajax/: ajaxFn.ts  error.ts  index.ts  service.ts
frontend/src/component/: ErrorComponent.tsx  ErrorMessage.tsx  Loading.tsx  NotFound.tsx
frontend/src/component/InvitationLayout/: index.tsx
frontend/src/component/Loading/: index.css  index.tsx
frontend/src/components/: Button.tsx  Input.tsx  Loading.tsx  NullableNumberInput.tsx  NumberInput.tsx  Tooltip.tsx
frontend/src/components/InvitationLayout/: index.tsx
frontend/src/context/: ErrorModal.tsx
frontend/src/pages/: ErrorPage.tsx  Invitation.tsx
frontend/src/util/: display.ts  time.ts
frontend/src/utils/: DebugUtil.ts  GuestInfoValidator.ts
interface/: Cargo.toml  package.json
interface/src/: types.rs  types.ts
scripts/: docker_release.sh  gce_update.sh
(+40 files in other folders)
