[package]
name = "wedding_backend"
version = "0.1.0"
authors = ["ianlau <ianlauyin@gmail.com>"]
edition = "2024"
include = ["assets/web/**/*"]

[dependencies]
framework.git = "https://github.com/neowu/core_rs_workspace.git"
wedding_backend_macros.path = "macros"

wedding_interface.workspace = true
serde.workspace = true
chrono.workspace = true

tracing = "0.1.41"
uuid = { version = "1.13.0", features = ["v4","serde"]}
indexmap = { version = "2.11.4",  features = ["serde"]}

axum = { version = "0.8.4", features = ["macros"]}
tokio = { version = "1.47.1", features = ["full"]}
tower-http = "0.6.2"

# db
firestore = "0.47.0"
rustls = "0.23.31"
aws-lc-rs = { version = "1.0.0-rc1" }
futures = "0.3.31"

